rnc/src/snapshots/muffy_rnc__tests__schema__svg11__svg11.rnc.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "svg",
                uri: "http://www.w3.org/2000/svg",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "xlink",
                uri: "http://www.w3.org/1999/xlink",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Include(
                        Include {
                            uri: "svg11-inc.rnc",
                            inherit: Some(
                                Prefix(
                                    "svg",
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Start {
                        combine: None,
                        pattern: Name(
                            Name {
                                prefix: None,
                                local: "svg",
                            },
                        ),
                    },
                ],
            },
        ),
    ),
}
